--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -15,3 +15,19 @@ endpoints.enabled = true
 endpoints.health.enabled = true
 
 spring.main.allow-bean-definition-overriding=true
+
+#Configure mybatis
+
+#Configure the xml Mapping path
+mybatis.mapper-locations=classpath:mapping/*.xml
+#Configure entity category names
+mybatis.type-aliases-package=com.example.demo.entity
+#Naming method of open hump
+mybatis.configuration.map-underscore-to-camel-case=true
+
+#Configure Mysql connection
+spring.datasource.url=jdbc:mysql://localhost:3306/mybatis?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
